--- a/Random/BootstrapTest.html
+++ b/Random/BootstrapTest.html
@@ -8,16 +8,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
+    <!-- use fluid -->
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-16">
+      <!-- need the row to have cascading -->
+      <div class="row bg-warning">
+        <!-- there are 12 cols per -->
+        <!-- bg = background -->
+        <div class="col-12 col-xl-3 bg-danger">
           <p>Col 1</p>
         </div>
-        <div class="col">
-          <p> col 2</p>
+        <div class="col bg-primary">
+          <!-- display for font types -->
+          <p class="display-8"> col 2</p>
         </div>
-        <div class="col">
+        <div class="col colour-primary">
           <p>col 3</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <p>col4</p>
+        </div>
+        <div class="col-12 col-md-6">
+          <p>col5</p>
         </div>
       </div>
     </div>
