The layout of cards wasnt working

--- a/Random/Notworking.html
+++ b/Random/Notworking.html
@@ -16,19 +16,19 @@
           <a href="file:///C:/xampp/htdocs/GITHUB/2020-year-11-web-design-classwork-Bmc9529/Random%20work/Ethan%20Bad.html" class="text-light">Link here</a>
         </div>
       </div>
-      <div class="row gx-4">
+      <div class="row m-0 p-0 g-4">
         <!-- g,m,p all max 5 -->
-        <div class=" col-12 col-md-6 col-lg-3">
-          <p class=" border bg-light">Column content here</p>
+        <div class="col-12 col-md-6 col-lg-3">
+          <p class="p-3 border bg-light">Column content here</p>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
-          <p class=" border bg-light">Column content here</p>
+          <p class="p-3 border bg-light">Column content here</p>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
-          <p class=" border bg-light">Column content here</p>
+          <p class="p-3 border bg-light">Column content here</p>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
-          <p class=" border bg-light">Column content here</p>
+          <p class="p-3 border bg-light">Column content here</p>
         </div>
 
       </div>
