Working same height cards
Adds h-100 to all class="card" as that causes the heights to be the same

--- a/Random/Awesomeshoes.html
+++ b/Random/Awesomeshoes.html
@@ -50,7 +50,8 @@
         <div class="col-9">
           <div class="row g-2">
             <div class=" col-6 col-md-4">
-              <div class="card">
+              <!-- add the h-100 for height 100% to all cards that should be same height -->
+              <div class="card h-100">
                 <img src="Images/shoe1.jpg" alt="">
                 <div class="card-body text-center">
                   <p>Adidas Mens Code Chaos Golf Shoes</p>
@@ -60,7 +61,7 @@
             </div>
 
             <div class=" col-6 col-md-4">
-              <div class="card">
+              <div class="card h-100">
                 <img src="Images/shoe2.jpg" alt="">
                 <div class="card-body text-center">
                   <p>Adidas Mens Chaos Golf Shoes</p>
@@ -70,7 +71,7 @@
             </div>
 
             <div class=" col-6 col-md-4">
-              <div class="card">
+              <div class="card h-100">
                 <img src="Images/shoe3.jpg" alt="">
                 <div class="card-body text-center">
                   <p>Adidas Mens Chaos Golf Shoes</p>
@@ -80,7 +81,7 @@
             </div>
 
             <div class=" col-6 col-md-4">
-              <div class="card">
+              <div class="card h-100">
                 <img src="Images/shoe4.jpg" alt="">
                 <div class="card-body text-center">
                   <p>Adidas Mens Chaos Golf Shoes</p>
