--- a/Random/Formpage.html
+++ b/Random/Formpage.html
@@ -7,6 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
+    <div class="container-fluid">
+      <!-- Use form to tie lots of inputs together -->
+        <form class="mt-4 col-5 p-4 border rounded bg-light">
+          <!-- adds margin to bottom for spacing -->
+          <div class="mb-3">
+            <!-- Means when you click on text in label it brings you to tied item with the same id in the for="" -->
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <!-- Id is same as labels for therefore the label links to the input -->
+            <!-- aria-describedby is for page readers -->
+            <!-- ID can be whatever, they dont seem to have give it styling -->
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+            <div id="passwordHelpBlock" class="form-text">
+              Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+            </div>
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+          <button type="submit" class="btn btn-danger">Submit</button>
+        </form>
+
+    </div>
 
 
     <!-- javascript down here -->
