--- a/Random/Stac.html
+++ b/Random/Stac.html
@@ -52,37 +52,34 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    <form method="post">
-                      <!-- have to do guttering weirdly like this -->
-                      <div class="col bg-light border rounded p-4 h-100">
-                        <div class="mb-3">
-                          <!-- Means when you click on text in label it brings you to tied item with the same id in the for="" -->
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <!-- Id is same as labels for therefore the label links to the input -->
-                          <!-- aria-describedby is for page readers -->
-                          <!-- ID can be whatever, they dont seem to have give it styling -->
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
-                          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <!-- do this for sizing -->
-                          <input type="password" class="form-control form-control-lg" id="exampleInputPassword1">
-                          <div id="passwordHelpBlock" class="form-text">
-                            Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                          </div>
-                        </div>
-                        <div class="mb-3 form-group">
-                          <label for="Question" class="form-label">Question</label>
-                          <textarea class="form-control" id="Question" rows="4" cols="1"></textarea>
-                        </div>
-                        <div class="mb-3 form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
-                        <button type="submit" class="btn btn-danger">Submit</button>
+                    <div class="col bg-light border rounded p-4">
+                      <div class="mb-3">
+                        <!-- Means when you click on text in label it brings you to tied item with the same id in the for="" -->
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <!-- Id is same as labels for therefore the label links to the input -->
+                        <!-- aria-describedby is for page readers -->
+                        <!-- ID can be whatever, they dont seem to have give it styling -->
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                       </div>
-                    </form>
+                      <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <!-- do this for sizing -->
+                        <input type="password" class="form-control form-control-lg" id="exampleInputPassword1">
+                        <div id="passwordHelpBlock" class="form-text">
+                          Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <label for="Question" class="form-label">Question</label>
+                        <textarea class="form-control" id="Question" rows="8" cols="1"></textarea>
+                      </div>
+                      <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                      </div>
+                      <button type="submit" class="btn btn-danger">Submit</button>
+                    </div>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
