--- a/Random/Stac.html
+++ b/Random/Stac.html
@@ -40,12 +40,12 @@
           </ul>
           <form class="d-flex">
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              <span class="material-icons">pregnant_woman</span>Book a tour <i class="bi bi-chevron-down"></i>
-            </button>
+            <!-- <div class="p-0"> -->
+              <button type="button" class="btn w-75 text-light" data-bs-toggle="modal" data-bs-target="#exampleModal"><span class="material-icons">pregnant_woman</span>Book A Tour <i class="bi bi-chevron-down"></i></button>
+            <!-- </div> -->
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
+              <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Book a Tour</h5>
@@ -64,15 +64,14 @@
                       </div>
                       <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <!-- do this for sizing -->
-                        <input type="password" class="form-control form-control-lg" id="exampleInputPassword1">
+                        <input type="password" class="form-control" id="exampleInputPassword1">
                         <div id="passwordHelpBlock" class="form-text">
                           Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                         </div>
                       </div>
                       <div class="mb-3">
                         <label for="Question" class="form-label">Question</label>
-                        <textarea class="form-control" id="Question" rows="8" cols="1"></textarea>
+                        <textarea class="form-control" id="Question" rows="4" cols="1"></textarea>
                       </div>
                       <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -89,7 +88,7 @@
               </div>
             </div>
             <!-- end of modal -->
-            <div class="input-group mb-3">
+            <div class="input-group">
               <input type="text" class="form-control" placeholder="Search" aria-label="Example text with button addon" aria-describedby="button-addon1">
               <button class="btn btn-outline-secondary text-light" type="button" id="button-addon1"><i class="bi bi-search"></i></button>
             </div>
