--- a/Random/Stac.html
+++ b/Random/Stac.html
@@ -99,11 +99,20 @@
     </nav>
 
     <!-- main content -->
-    <div class="container-fluid">
-      <div class="col m-4 bg-light">
-
+    <div class="container-fluid p-0">
+      <div class="col m-3 bg-light-blue rounded p-4">
+        <p class="display-5">St Andrew's College - Framing our future</p>
+        <p class="text-muted">Together, building better people, for life</p>
         <div class="dropdown-divider"></div>
+        <p class="mb-md-5">Our vision is to be at the leading edge of high performance educational practice, in a community which values caring for others, tradition and creativity, in order to provide young people with the roots and wings to flourish in an ever-changing world</p>
       </div>
+    </div>
+
+    <!-- footer -->
+    <div class="container-fluid bg-blue p-3">
+      <footer>
+        <p class="text-light text-center mb-0">© St Andrew's College - 347 Papanui Road, Christchurch 8052, 03 940 2000</p>
+      </footer>
     </div>
 
 
